--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Your code here -->
   
-  <img src=""
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
 </body>
 </html>
