--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  
   
 
 </body>
