--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion">
+  
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-  
-  
 
 </body>
 </html>
