--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion">
   
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"alt="lion" title="Company pet">
 
 </body>
 </html>
